network_policies/Example01/payment_pod.yml
apiVersion: v1
kind: Pod 
metadata: 
  name: payment-pod 
  labels: 
    app: shopping
spec: 
  containers:
    - name: payment-container 
      image: busybox
      command: ["sleep", "3600"]
      ports:
        - containerPort: 80
