network_policies/Example01/pod.yml
apiVersion: v1
kind: Pod 
metadata: 
  name: shopping-pod 
  labels: 
    app: nginx
spec: 
  containers:
    - name: shopping-container 
      image: nginx 
      ports: 
        - containerPort: 80
