network_policies/Example01/net_policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata:
  name: net-policy
spec:
  podSelector:
    matchLabels:
      app: nginx 
  policyTypes: 
  - Ingress 
  - Egress 
  ingress: 
  - from:
    - podSelector:
        matchLabels:
          app: shopping 
    ports: 
    - protocol: TCP
      port: 80
